@@ -141,3 +141,4 @@ T_291waveformatextensible:wav-avi:passed:20110415-124159:0.057127293
 T_292avi_aac_706d_privsize_huge:7b34a92c34461e869834e7db0c63ab97:passed:20110422-152313:0.042857788
 T_293aac_adif_misdetected_as_video:3:passed:20110426-091956:0.02536219
 T_294vobsub_negative_delay:6e1c59551b7ad05fa570bed2ffc926fe:passed:20110523-204847:1.41224474
+T_295vc1_rederiving_frame_types:b44ddb45845f897b986582c112e9ef1e-9864da369d9cb828ad428bb7e35a0f80:passed:20110525-205715:8.761058959
