@@ -1,3 +1,8 @@
+2011-05-25  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: Fixed remuxing certain VC1 video tracks from Matroska
+	files. Fix for bug 636.
+
 2011-05-23  Moritz Bunkus  <moritz@bunkus.org>
 
 	* Released v4.8.0.
